# sector-cpc

./: .gitignore  CMakeLists.txt  amsdos.c  amsdos.h  amsdos.h.gch  cpcemu.c  cpcemu.h  cpcemu.h.gch  cpm.c  cpm.h  cpm.h.gch  cpmemu.c  cpmemu.h  face.xcf  platformdef.h  platformdef.h.gch  sector-cpc.c  tests.c  todo  types.h  types.h.gch
docs/: README.html  README.md  face.xcf
